kycsite/source/stylesheets/_partials/_tours.css.scss
.tour1, .tour2, .tour3 {
	width: 100%;
	height:300px;
	
	@include breakpoint ($full-size) {
		height:300px;
	}
	@include breakpoint($tablet-size) {
		 height:236px;
	}
	
	@include breakpoint($mobile-landscape) {
		 height:100px;
	}
	
	@include breakpoint($mobile-portrait) {
		height:100px;
	}
}

.tour1{
	background-image: url(/images/KYCmultipdxsprite.jpg);
	background-size: 100%;
	
	@include breakpoint($mobile-portrait) {
		background-repeat: no-repeat;
		background-position: 16% 16%;
		}
}

.tour2{
	background-image: url(/images/KYCpdx101sprite.jpg);
	background-size:100%;
	
	@include breakpoint($mobile-portrait) {
		background-repeat: no-repeat;
		background-position: 16% 16%;
	}
}

.tour3{
	background-image: url(/images/KYCdiypdxsprite.jpg);
	background-size: 100%;
	
	@include breakpoint($mobile-portrait) {
		background-repeat: no-repeat;
		background-position: 16% 16%;
	}
}

.diy{
	height:500px;
}

.bullets{
	margin-left:20px;
	margin-bottom: 40px;
}

.gallery{
	width:100%;
	height:100%;
	
		@include breakpoint($tablet-size) {
			width:236px;
		}
		
		@include breakpoint($mobile-landscape) {
			width: 420px;
		}
		
		@include breakpoint($mobile-portrait) {
			width:280px;
		}
		
	img{
		padding-left: 10px;
		padding-bottom: 10px;
		
			@include breakpoint($tablet-size) {
				width: 100px;
				height: 100px;
				margin: 0 auto;
			}
		
			@include breakpoint($mobile-landscape) {
				width: 90px;
				height:90px;
				margin: 0, auto;
			}
		
			@include breakpoint($mobile-portrait) {
				width: 125px;
				height: 125px;
				margin: 0 auto;
			}
	
	}
}

.portland {
	display: none;
}

.multicultural {
	display: none;
}


.video {
	margin-top: -100px;
}

